# farchive

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: generate_fixtures.py
src/farchive/: __init__.py  _archive.py  _chunking.py  _cli.py  _compression.py  _schema.py  _types.py
tests/: conftest.py  test_atomicity.py  test_batch.py  test_blob.py  test_chunked.py  test_cli.py  test_cli_cat.py  test_cli_du_ls.py  test_cli_extract_diff.py  test_cli_import.py  test_cli_maint.py  test_cli_phase1.py  test_cli_phase3.py  test_cli_phase4.py  test_cli_phase5.py  test_cross_platform.py  test_delta.py  test_event_kinds.py  test_fixtures.py  test_observe.py  test_properties.py  test_purge.py  test_schema_migration.py  test_timestamps.py
tests/fixtures/: v1_smoke.farchive
